	* #t4060: Syncing
						New files:
						* Configuration/FlexForms/Default/Slickcontent/flexform_sheet_sync.xml
						* Resources/Private/Fluid/FluidStyledContent/Partials/Javascript.html
						Affected files:
						* Configuration/FlexForms/Default/Slickcontent/flexform.xml
						* Resources
							* Private/Fluid/FluidStyledContent/Layouts/Slickcontent.html
							* Public/CSS/default.css

4.4.4
  19-10-02
	Manual
	* #i0060: Section is removed: Known bugs > Reference
						:ref: #i0058
	Feature
	* #i0059: Javascript with new feature: slick slider can used as reference
						Affected files:
						* Configuration/TypoScript/Default/Base/Page/jsFooterInline/slickinit.ts
						* Resources/Private/Fluid/FluidStyledContent/Partials/Javascript.html

4.4.3
  19-08-27	
	Manual
	* #i0058: New section: Known bugs > Reference
						:ref: #i0060
	Bugfix
	* #i0057: composer.json

4.4.2
  19-06-12
	Manual
	* #i0056: xBlog Slider with schematic representation
						Affected files:
						* Documentation/Users/Slick/Slickcontent/xBlog/Index.rst

4.4.1
  19-05-08
	Improvement
	* #i0055: Internal improvement for search engines.

4.4.0
  19-04-30
	Feature
	* #i0054: File Collections
						Thanks to Marjan Ratkovic (solutix.com) for the contract :)
						New files:
						* Configuration/TypoScript/Default/Image/tt_content/setup.ts
						* Resources/Private/Fluid/FluidStyledContent/Templates/Slickfilecollection.html
						Affected files:
						* Configuration
							* ExtTables/Default/TSconfig/mod.wizards.newContentElement.wizardItems.slick.ts
						  * TCA/Overrides/Default/tt_content
								* addTcaSelectItem.php
								* types.php
						  * TypoScript/Default
								* Base/Page/jsFooterInline/slickinit.ts
								* Content/tt_content/setup.ts
						* Resources/Private/Language
							* Backend.xlf
							* de.Backend.xlf
	Manual
	* #i0055: Update

4.3.7
  19-04-18
	Development
	* #i0053: Analyzing of :ref: #i0051 without success
						Look for #i0053 in the files of slick
