@@ -27,6 +27,8 @@ page {
           font-weight: {$plugin.slick.carousel.css.header.font-weight};
         }
         /* color */
+        .slick-slider .slick-next:before,
+				.slick-slider .slick-prev:before, 
         #slickcarousel1 .slick-next:before,
 				#slickcarousel1 .slick-prev:before, 
         #slickcarousel2 .slick-next:before,
@@ -35,16 +37,20 @@ page {
 				#slickcarousel3 .slick-prev:before {
           color: {$plugin.slick.carousel.css.colors.arrows};
         }
+        .slick-slider  .slick-dots li button:before,
         #slickcarousel1 .slick-dots li button:before,
         #slickcarousel2 .slick-dots li button:before,
         #slickcarousel3 .slick-dots li button:before {
           color: {$plugin.slick.carousel.css.colors.dots.default};
         }
+        .slick-slider .slick-dots li.slick-active button:before,
         #slickcarousel1 .slick-dots li.slick-active button:before,
         #slickcarousel2 .slick-dots li.slick-active button:before,
         #slickcarousel3 .slick-dots li.slick-active button:before {
           color: {$plugin.slick.carousel.css.colors.dots.active};
         }
+        .slick-slider .slick-next:before,
+				.slick-slider .slick-prev:before, 
         .slider1 .slick-next:before,
 				.slider1 .slick-prev:before, 
         .slider2 .slick-next:before,
@@ -53,11 +59,13 @@ page {
 				.slider3 .slick-prev:before {
           color: {$plugin.slick.carousel.css.colors.arrows};
         }
+        .slick-slider .slick-dots li button:before,
         .slider1 .slick-dots li button:before,
         .slider2 .slick-dots li button:before,
         .slider3 .slick-dots li button:before {
           color: {$plugin.slick.carousel.css.colors.dots.default};
         }
+        .slick-slider .slick-dots li.slick-active button:before,
         .slider1 .slick-dots li.slick-active button:before,
         .slider2 .slick-dots li.slick-active button:before,
         .slider3 .slick-dots li.slick-active button:before {
